# erlesen

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start_TGI.sh
erlesen/data/: hurraki_crawl.jsonl  topics.json
erlesen/evaluation/: checker_test.py  grammar_checker.py
erlesen/prompts/: linguistic_challanges.json  llama_template.txt  original_reconstruction_prompt.txt  reconstruction_prompt.txt  short_reconstruction_prompt.txt  system_message.txt
erlesen/synth/: create_synthetic_data.py
erlesen/training/: train_llm.py
erlesen/ui/: app.py
